Revision history for {{$dist->name}}

{{$NEXT}}

0.07      2015-02-16 18:16:54 -0500
  - Promote to production

0.06_05   2015-02-16 10:07:27 -0500
  - Fixed MSWin32 logic, removed MB requirement of 0.4202

0.06_04   2015-02-15 08:17:38 -0500
  - Bump MB requirement up to 0.4202

0.06_03   2015-02-14 23:25:21 -0500
  - Only attempt to use Alien::MSYS if it is installed

0.06_02   2015-02-14 08:21:58 -0500
  - Mark prereqs as "dynamic" as we need Alien::MSYS on Windows

0.06_01   2015-02-13 10:43:04 -0500
  - Only require Alien::MSYS if we need to do a build from source

0.06      2015-02-03 15:39:48 -0500
  - Ensure that Alien::Base 0.009 is installed in Build.PL

0.05      2015-01-27 05:03:00 -0500
  - Require Alien::Base 0.009 which supports multiple argument system
    This should relax some of the weirdisms in windows

0.04_01   2015-01-25 22:57:40 -0500
  - work around some weirdisms in windows

0.04      2015-01-23 17:15:50 -0500
  - bump version requirement for Alien::Base 0.007
    I am pretty sure this will correct a cpan testers failure that I am seeing
    in FFI::Platypus.

0.03      2015-01-21 07:30:24 -0500
  - Work-around for unthreaded OpenBSD.  Basically applied same wonky "fix" as I did to FFI::Raw:
    https://github.com/plicease/p5-FFI-Raw/commit/e223cf61f599ea7f51e5f5ff088de43028c8f506

0.02      2014-09-11 16:56:51 -0400
  - make Alien::Base a configure requires

0.01      2014-09-11 14:40:53 -0400
  - initial version