@@ -12,6 +12,7 @@ pod_coverage:
   # for either Class or method.
   private:
     - Alien::FFI#libs
+    - Alien::FFI#cflags
 
 unused_vars:
   skip: 0
